@@ -7,6 +7,8 @@
 * Fixed a bug which prevented certain migrations from running in a multi-db setup.
 * Fixed a regression which prevented the ``Page`` model from rendering correctly
   when used in a ``raw_id_field``.
+* Fixed a regression which caused the CMS to cache the toolbar when ``CMS_PAGE_CACHE``
+  was set to ``True`` and an anon user had ``cms_edit`` set to ``True`` on their session.
 
 
 === 3.4.1 (2016-10-04) ===
